--- a/index.html
+++ b/index.html
@@ -100,11 +100,106 @@
             </section>
 
             <section id="section-1">
+                <div class="container">
+                    <div> 
+                        <h3>Strategic Plan</h3>
 
+                        <p>
+                            Egestas dui id ornare arcu odio. In tellus integer feugiat scelerisque varius morbi enim nunc. Habitasse platea dictumst quisque sagittis. Interdum velit euismod in pellentesque massa placerat duis. Quis viverra nibh cras pulvinar mattis.
+                        </p>
+                    </div>
+
+                    <div> 
+                        <h3>App Development</h3>
+
+                        <p>
+                            Develop an on-demand app for your delivery business to reach your targeted customers without any interruption
+                        </p>
+
+                        <button class="button download-button"><i class="fa-solid fa-arrow-down-long" style="color:black"></i>Download</button></button>
+                    </div>
+                </div>
             </section>
 
             <section id="section-2">
+                <div class="container">
+                    <div> 
+                        <p>TESTIMONIALS</p>
 
+                        <h3>We are committed expert partners</h3>
+
+                        <p>
+                            We place huge value on strong relationships and have seen the benefit they bring to our business. Customer feedback is vital in helping us to get it right. 
+                        </p>
+                    </div>
+
+                    <div class="testimonial-row">
+
+                        <div class="testimonial-picture">
+                            <img src="img/testimonial1.jpg" alt="testimonnial-1">
+                        </div>
+
+                        <div class="testimonial-text">
+                            <p>
+                                <i class="fa-solid fa-quote-left" style="color: #ffffff;"></i>
+                                <span>
+                                    Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh pulvinar proin
+                                </span>
+                                <i class="fa-solid fa-quote-right" style="color: #ffffff;"></i>
+                            </p>
+
+                            <p>
+                                <strong>NAT REYNOLDS</strong>
+                            </p>
+                        </div>
+
+                    </div>
+
+                    <div class="testimonial-row">
+
+                        <div class="testimonial-picture">
+                            <img src="img/testimonial2.jpg" alt="testimonnial-2">
+                        </div>
+
+                        <div class="testimonial-text">
+                            <p>
+                                <i class="fa-solid fa-quote-left" style="color: #ffffff;"></i>
+                                <span>
+                                    Pharetra vel turpis nunc eget lorem. Quisque id diam vel quam elementum pulvinar etiam. Urna porttitor rhoncus dolor purus non enim praesent elementum.
+                                </span>
+                                <i class="fa-solid fa-quote-right" style="color: #ffffff;"></i>
+                            </p>
+
+                            <p>
+                                <strong>CELIA ALMEDA</strong>
+                            </p>
+                        </div>
+
+                    </div>
+
+                    <div class="testimonial-row">
+                        
+                        <div class="testimonial-picture">
+                            <img src="img/testimonial3.jpg" alt="testimonnial-3">
+                        </div>
+
+                        <div class="testimonial-text">
+                            <p>
+                                <i class="fa-solid fa-quote-left" style="color: #ffffff;"></i>
+                                <span>
+                                    Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin. Nibh nisl condimentum id venenatis a condimentum.
+                                </span>
+                                <i class="fa-solid fa-quote-right" style="color: #ffffff;"></i>
+                            </p>
+
+                            <p>
+                                <strong>BOB ROBERTS</strong>
+                            </p>
+                        </div>
+
+                    </div>
+
+                </div>
             </section>
 
             <section id="section-3">
