Finished html basic structure

--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
             <section id="section-1">
                 <div class="container">
                     <div> 
+                        <img src="img/planning1.png" alt="planning-1">
+
                         <h3>Strategic Plan</h3>
 
                         <p>
@@ -110,6 +112,8 @@
                     </div>
 
                     <div> 
+                        <img src="img/planning2.png" alt="planning-2">
+
                         <h3>App Development</h3>
 
                         <p>
@@ -203,21 +207,140 @@
             </section>
 
             <section id="section-3">
+                <h2>Benefits of working with us</h2>
+
+                <div class="row row-1">
+                    <div class="column column-1">
+                        <h1>01</h1>
+
+                        <h2>High Quality</h2>
+
+                        <p>
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
+
+                        <button class="button more-button">more</button>
+                    </div>
+
+                    <div class="column column-2">
+                        <h1>02</h1>
+
+                        <h2>Creative Team</h2>
+
+                        <p>
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
+
+                        <button class="button more-button">more</button>
+                    </div>
+
+                    <div class="column column-3">
+                        <h1>03</h1>
+
+                        <h2>Amazing Results</h2>
+
+                        <p>
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
+
+                        <button class="button more-button">more</button>
+                    </div>
+                </div>
+
+                <div class="row row-1">
+                    <div class="column column-1">
+                        <h1>04</h1>
+
+                        <h2>Best Pricing</h2>
+
+                        <p>
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
+
+                        <button class="button more-button">more</button>
+                    </div>
+
+                    <div class="column column-2">
+                        <h1>05</h1>
+
+                        <h2>Innovations</h2>
+
+                        <p>
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
+
+                        <button class="button more-button">more</button>
+                    </div>
+
+                    <div class="column column-3">
+                        <h1>06</h1>
+
+                        <h2>24/7 Support</h2>
+
+                        <p>
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
+
+                        <button class="button more-button">more</button>
+                    </div>
+                </div>
 
             </section>
 
             <section id="section-4"> 
+                <div class="text">
+                    <h1>About Us</h1>
+
+                    <p>
+                        Sample text. Click to Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Pharetra magna ac placerat vestibulum. Quam lacus suspendisse faucibus interdum posuere lorem. Egestas tellus rutrum tellus pellentesque eu tincidunt. Neque vitae tempus quam pellentesque nec. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Interdum velit euismod in pellentesque massa placerat duis.
+                    </p>
+
+                    <p>
+                        Quis viverra nibh cras pulvinar mattis. Ornare arcu dui vivamus arcu felis bibendum ut tristique. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum odio. Dignissim diam quis enim lobortis scelerisque. Tellus molestie nunc non blandit massa enim nec dui. the text box. Click again or double click to start editing the text.
+                    </p>
+                </div>
+
+                <div class="testimonial-picture">
+                    <img src="img/about.jpg" alt="about">
+                    <i class="fa-solid fa-quote-left" style="color: #9792e4;"></i>
+                    <h4>I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio</h4>
+
+                    <button type="button" class="button">
+                        <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
+                        <span>Find me on linkedin</span>
+                    </button>
+                </div>
 
             </section>
 
             <section id="section-5"> 
+                <p>GET STARTED</p>
 
+                <h2>Simple, Transparent Pricing</h2>
+
+                <h1>It's Free!</h1>
+
+                <p>
+                    We're still in beta and we will be for a while. As we add more funcionality, we'll look into other plans with more controls. 
+                </p>
+
+                <button type="button" class="button">
+                    <span>Get Started</span>
+                </button>
+
+                <p>Copyright 2021 Boolean ● Classe 98 ● <a href="#">Privacy Policy</a></p>
             </section>
 
         </main>
 
         <footer>
-            <p>&copy; 2023 My Mobile-First Webpage</p>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi maiores minima vitae vero nulla pariatur impedit!
+            </p>
+
+            <p>
+                <a href="#">Lorem ipsum</a> scelerisque mauris pellentesque <a href="#">Boolean careers</a>
+            </p>
         </footer>
 
     </body>
