Fixed icons on jumbotron

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                             </p>
                         </div>
 
-                        <div class="item item-4 one-third item-icon">
-                            <i class="fa-solid fa-laptop-code" style="color: #0084fd;"></i>
+                        <div class="item item-4 one-third">
+                            <i class="fa-solid fa-laptop-code item-icon" style="color: #0084fd;"></i>
                             <h3>Development</h3>
 
                             <p>
@@ -97,8 +97,8 @@
                             </p>
                         </div>
 
-                        <div class="item item-5 one-third item-icon">
-                            <i class="fa-solid fa-bullhorn" style="color: #0084fd;"></i>
+                        <div class="item item-5 one-third">
+                            <i class="fa-solid fa-bullhorn item-icon" style="color: #0084fd;"></i>
                             <h3>Branding</h3>
 
                             <p>
