Finished jumbotron for desktop

--- a/index.html
+++ b/index.html
@@ -50,14 +50,13 @@
                         <div class="item item-1 two-thirds">
                             <div class="text-item-1"> 
                                 <h3>Get a demo application</h3>
-
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis, architecto ad dolore quod, facere totam quas recusandae blanditiis.
                                 </p>
-
+                                <br>
                                 <button class="button jumbo-button">
                                     <i class="fa-brands fa-apple" style="color: #ffffff;"></i>
-                                    <span>App Store</span>
+                                    <span class="app-store">App Store</span>
                                 </button>
                             </div>
 
