Working on section-1 for desktop

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
             <section id="section-1">
                 <div class="container">
-                    <div> 
+                    <div class="left-column-section-1"> 
                         <img src="img/planning1.png" alt="planning-1">
 
                         <h3>Strategic Plan</h3>
@@ -121,7 +121,7 @@
                         </p>
                     </div>
 
-                    <div> 
+                    <div class="right-column-section-1"> 
                         <img src="img/planning2.png" alt="planning-2">
 
                         <h3>App Development</h3>
@@ -130,7 +130,7 @@
                             Develop an on-demand app for your delivery business to reach your targeted customers without any interruption
                         </p>
 
-                        <button class="button download-button"><i class="fa-solid fa-arrow-down-long" style="color:black"></i>Download</button></button>
+                        <button class="button download-button"><i class="fa-solid fa-arrow-down-long" style="color:black"></i></button>
                     </div>
                 </div>
             </section>
