Fixed div.text in section 2

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
             <section id="section-2">
                 <div class="container">
-                    <div> 
+                    <div class="text"> 
                         <p>TESTIMONIALS</p>
 
                         <h3>We are committed expert partners</h3>
