Finished section 2 for desktop

--- a/index.html
+++ b/index.html
@@ -150,19 +150,19 @@
                     <div class="testimonial-row">
 
                         <div class="testimonial-picture">
-                            <img src="img/testimonial1.jpg" alt="testimonnial-1">
+                            <img src="img/testimonial1.jpg" alt="testimonial-1">
                         </div>
 
                         <div class="testimonial-text">
                             <p>
                                 <i class="fa-solid fa-quote-left" style="color: #ffffff;"></i>
                                 <span>
-                                    Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh pulvinar proin
+                                    Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh pulvinar proin.
                                 </span>
                                 <i class="fa-solid fa-quote-right" style="color: #ffffff;"></i>
                             </p>
 
-                            <p>
+                            <p class="testimonial-name">
                                 <strong>NAT REYNOLDS</strong>
                             </p>
                         </div>
@@ -172,7 +172,7 @@
                     <div class="testimonial-row">
 
                         <div class="testimonial-picture">
-                            <img src="img/testimonial2.jpg" alt="testimonnial-2">
+                            <img src="img/testimonial2.jpg" alt="testimonial-2">
                         </div>
 
                         <div class="testimonial-text">
@@ -184,7 +184,7 @@
                                 <i class="fa-solid fa-quote-right" style="color: #ffffff;"></i>
                             </p>
 
-                            <p>
+                            <p class="testimonial-name">
                                 <strong>CELIA ALMEDA</strong>
                             </p>
                         </div>
@@ -194,7 +194,7 @@
                     <div class="testimonial-row">
                         
                         <div class="testimonial-picture">
-                            <img src="img/testimonial3.jpg" alt="testimonnial-3">
+                            <img src="img/testimonial3.jpg" alt="testimonial-3">
                         </div>
 
                         <div class="testimonial-text">
@@ -206,7 +206,7 @@
                                 <i class="fa-solid fa-quote-right" style="color: #ffffff;"></i>
                             </p>
 
-                            <p>
+                            <p class="testimonial-name">
                                 <strong>BOB ROBERTS</strong>
                             </p>
                         </div>
