--- a/index.html
+++ b/index.html
@@ -348,11 +348,11 @@
         </main>
 
         <footer>
-            <p>
+            <p class="top-footer-paragraph">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi maiores minima vitae vero nulla pariatur impedit!
             </p>
 
-            <p>
+            <p class="bottom-footer-paragraph">
                 <a href="#">Lorem ipsum</a> scelerisque mauris pellentesque <a href="#">Boolean careers</a>
             </p>
         </footer>
