Finished section 5 for desktop devices

--- a/index.html
+++ b/index.html
@@ -330,19 +330,24 @@
             <section id="section-5"> 
                 <p>GET STARTED</p>
 
-                <h2>Simple, Transparent Pricing</h2>
+                <h1>Simple, Transparent Pricing</h1>
 
-                <h1>It's Free!</h1>
+                <h2>It's Free!</h2>
 
-                <p>
+                <p class="still-in-beta">
                     We're still in beta and we will be for a while. As we add more funcionality, we'll look into other plans with more controls. 
                 </p>
 
-                <button type="button" class="button">
-                    <span>Get Started</span>
-                </button>
+                <button class="button get-started">Get Started</button>
 
-                <p>Copyright 2021 Boolean ● Classe 98 ● <a href="#">Privacy Policy</a></p>
+
+                <p>
+                    Copyright 2021 Boolean 
+                    <span class="point">●</span> 
+                    Classe 98 
+                    <span class="point">●</span> 
+                    <a href="#">Privacy Policy</a>
+                </p>
             </section>
 
         </main>
