Finished section 4 desktop

--- a/index.html
+++ b/index.html
@@ -302,14 +302,14 @@
             </section>
 
             <section id="section-4"> 
-                <div class="text">
+                <div class="text-section-4">
                     <h1>About Us</h1>
 
-                    <p>
+                    <p class="top-text">
                         Sample text. Click to Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Pharetra magna ac placerat vestibulum. Quam lacus suspendisse faucibus interdum posuere lorem. Egestas tellus rutrum tellus pellentesque eu tincidunt. Neque vitae tempus quam pellentesque nec. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Interdum velit euismod in pellentesque massa placerat duis.
                     </p>
 
-                    <p>
+                    <p class="bottom-text">
                         Quis viverra nibh cras pulvinar mattis. Ornare arcu dui vivamus arcu felis bibendum ut tristique. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum odio. Dignissim diam quis enim lobortis scelerisque. Tellus molestie nunc non blandit massa enim nec dui. the text box. Click again or double click to start editing the text.
                     </p>
                 </div>
@@ -319,9 +319,9 @@
                     <i class="fa-solid fa-quote-left" style="color: #9792e4;"></i>
                     <h4>I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio</h4>
 
-                    <button type="button" class="button">
+                    <button type="button" class="button find-me-on-linkedin">
                         <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
-                        <span>Find me on linkedin</span>
+                        Find me on linkedin
                     </button>
                 </div>
 
