Finished dekstop version

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <div class="left-column-section-1"> 
                         <img src="img/planning1.png" alt="planning-1">
 
-                        <h3>Strategic Plan</h3>
+                        <h3>Strategic Planning</h3>
 
                         <p>
                             Egestas dui id ornare arcu odio. In tellus integer feugiat scelerisque varius morbi enim nunc. Habitasse platea dictumst quisque sagittis. Interdum velit euismod in pellentesque massa placerat duis. Quis viverra nibh cras pulvinar mattis.
@@ -147,7 +147,7 @@
                         </p>
                     </div>
 
-                    <div class="testimonial-row">
+                    <div class="testimonial-row testimonial-row-1">
 
                         <div class="testimonial-picture">
                             <img src="img/testimonial1.jpg" alt="testimonial-1">
@@ -169,7 +169,7 @@
 
                     </div>
 
-                    <div class="testimonial-row">
+                    <div class="testimonial-row testimonial-row-2">
 
                         <div class="testimonial-picture">
                             <img src="img/testimonial2.jpg" alt="testimonial-2">
@@ -191,7 +191,7 @@
 
                     </div>
 
-                    <div class="testimonial-row">
+                    <div class="testimonial-row testimonial-row-3">
                         
                         <div class="testimonial-picture">
                             <img src="img/testimonial3.jpg" alt="testimonial-3">
