--- a/index-tablet.html
+++ b/index-tablet.html
@@ -217,85 +217,84 @@
             </section>
 
             <section id="section-3">
+                
+                <h2 class="main-section-title">Benefits of working with us</h2>
 
                 <div class="container">
-                    <h2 class="main-section-title">Benefits of working with us</h2>
 
-                    <div class="row row-1">
-                        <div class="column column-1">
-                            <h1>01</h1>
+                    <div class="grid-item grid-item-1">
+                        <h1>01</h1>
 
-                            <h2>High Quality</h2>
+                        <h2>High Quality</h2>
 
-                            <p>
-                                Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
-                            </p>
+                        <p>
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
 
-                            <button class="button more-button">more</button>
-                        </div>
-
-                        <div class="column column-2">
-                            <h1>02</h1>
-
-                            <h2>Creative Team</h2>
-
-                            <p>
-                                Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
-                            </p>
-
-                            <button class="button more-button">more</button>
-                        </div>
-
-                        <div class="column column-3">
-                            <h1>03</h1>
-
-                            <h2>Amazing Results</h2>
-
-                            <p>
-                                Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
-                            </p>
-
-                            <button class="button more-button">more</button>
-                        </div>
+                        <button class="button more-button">more</button>
                     </div>
 
-                    <div class="row row-2">
-                        <div class="column column-1">
-                            <h1>04</h1>
+                    <div class="grid-item grid-item-2">
+                        <h1>02</h1>
 
-                            <h2>Best Pricing</h2>
+                        <h2>Creative Team</h2>
 
-                            <p>
-                                Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
-                            </p>
+                        <p>
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut.Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
 
-                            <button class="button more-button">more</button>
-                        </div>
+                        <button class="button more-button">more</button>
+                    </div>
 
-                        <div class="column column-2">
-                            <h1>05</h1>
+                    <div class="grid-item grid-item-3">
+                        <h1>03</h1>
 
-                            <h2>Innovations</h2>
+                        <h2>Amazing Results</h2>
 
-                            <p>
-                                Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
-                            </p>
+                        <p>
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
 
-                            <button class="button more-button">more</button>
-                        </div>
+                        <button class="button more-button">more</button>
+                    </div>
 
-                        <div class="column column-3">
-                            <h1>06</h1>
 
-                            <h2>24/7 Support</h2>
 
-                            <p>
-                                Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
-                            </p>
+                    <div class="grid-item grid-item-4">
+                        <h1>04</h1>
 
-                            <button class="button more-button">more</button>
-                        </div>
-                </div>
+                        <h2>Best Pricing</h2>
+
+                        <p>
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
+
+                        <button class="button more-button">more</button>
+                    </div>
+
+                    <div class="grid-item grid-item-5">
+                        <h1>05</h1>
+
+                        <h2>Innovations</h2>
+
+                        <p>
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut.Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
+
+                        <button class="button more-button">more</button>
+                    </div>
+
+                    <div class="grid-item grid-item-6">
+                        <h1>06</h1>
+
+                        <h2>24/7 Support</h2>
+
+                        <p>
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis.
+                        </p>
+
+                        <button class="button more-button">more</button>
+                    </div>
 
                 </div>
 
