Fixed css file link

--- a/index-mobile.html
+++ b/index-mobile.html
@@ -9,7 +9,7 @@
         <!-- FONT AWESOME 6.4.0 -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
         <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="style-tablet.css">
+        <link rel="stylesheet" href="style-mobile.css">
         <title>Responsive Layout</title>
     </head>
     
